@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.421 2003-04-15 06:42:13 castaglia Exp $
+$Id: NEWS,v 1.422 2003-04-18 06:26:18 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -106,6 +106,11 @@ CVS
 - Bug 2002 - Per-<Directory> PathAllowFilter/PathDenyFilter.
 - Added RootRevoke directive.
 - Bug 2021 - Inetd mode and scoreboard format changes.
+- Bug 1432 - Human readable disk free cookie.  Display* files can now make
+  use of a %f magic cookie for displaying the available disk space with
+  units (i.e. KB, MB, GB, etc).  This compliments the currently available
+  %F cookie, used to display the number of bytes of available space (without
+  units).
 
 1.2.8 - Released 04-Mar-2003
 ---------------------------------
